--- a/anaconda-ks.cfg
+++ b/anaconda-ks.cfg
@@ -18,7 +18,7 @@ network  --bootproto=dhcp --device=ens33 --onboot=off --ipv6=auto --no-activate
 network  --hostname=localhost.localdomain
 
 # Root password
-rootpw --iscrypted $6$o6LbW07giqwUL9us$K4rDTHn3hJ0tWaW6dwzHq9XZa4iP.ZzCQcel3FtggVjCyGXtwKuNuhw13illXXaHl6dq5zUCQqW/k/1lkT.9R/
+rootpw --password=toor
 # System services
 services --enabled="chronyd"
 # System timezone
